@@ -3,9 +3,9 @@
 # REQUIRED: ReferenceDir must already exist. It may be created by untaring a
 # previous distribution.
 #
-OldBuild=10
+OldBuild=11
 OldVersion=2.6.0.$OldBuild
-NewBuild=11
+NewBuild=12
 NewVersion=2.6.0.$NewBuild
 
 ChangesDir=mux
